# MONAI

./: .amlignore  .clang-format  .deepsource.toml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  1  2d_filter_example.py  3d_filter_example.py  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.amd  MANIFEST.in  README.md  about.md  ai_build.py  batch_filter_example.py  codecov.yml  data_stats.yaml  environment-azureml.yml  environment-dev.yml  et --hard 52df2baf347809008dbf26dfa6a2f716eb12ae68q  events.out.tfevents.1635940012.apt-sh-ai  filter_example.py  for_test.txt  issue.txt  license  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements-release.txt  requirements.txt  runexamples.sh  (+19 more)
.github/: CODEOWNERS  codecov.yml  dco.yml  dependabot.yml  pr-labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: .codecov.yml  blossom-ci.yml  calibreapp-image-actions.yml  chatops.yml  cleanup.yml  codeql-analysis.yml  conda.yml  coverageapp.yml  cron-mmar.yml  cron-ngc-bundle.yml  cron.yml  docker.yml  format.yml  integration.yml  pythonapp-gpu.yml  pythonapp-min.yml  pythonapp.yml  release.yml  runtestapp.yml  setupapp.yml  weekly-preview.yml
GeometricTransform_demo/: DesignGeometricTransforms.md  Geometric Transforms Demo.ipynb  GeometricTransforms.py  demo.py
GeometricTransform_demo/sample_data/: Mammo_194_LMLO_N_080839.json
azureml_configs/: auto3dseg_test_task.yaml  azureml_config.json  heart_datalist.json  lung_datalist.json  prostate_datalist.json  task.yaml  task_heart.yaml  task_prostate.yaml
docs/: .readthedocs.yaml  Makefile  conf.py  index.html  index.rst  requirements.txt  transforms.html
docs/_static/: custom.css  layout.html  underscore.js
docs/images/: .desktop
docs/source/: api.rst  applications.md  apps.rst  auto3dseg.rst  bundle.rst  bundle_intro.rst  conf.py  config_syntax.md  contrib.rst  data.rst  decollate.md  engines.rst  fl.rst  handlers.rst  highlights.md  highlights.rst  highlights_v0.1.0.md  highlights_v0.1.md  highlights_v0.2.0.md  highlights_v0.2.md  index.rst  inferers.rst  installation.md  lazy_resampling.rst  losses.rst  mar_specification.rst  mb_properties.rst  mb_specification.rst  metrics.rst  modules.md  networks.rst  optimizers.rst  precision_accelerating.md  precision_performance.md  regularization.rst  transform_api.rst  transforms.rst  transforms_idx.rst  utils.rst  visualise.rst  (+15 more)
examples/: 3D_image_transforms.ipynb  README.md  cardiac_segmentation.ipynb  cifar10_to_monai.ipynb  densenet_classification_3d.py  densenet_classification_3d_array.py  densenet_classification_3d_dict.py  densenet_inference_3d_array.py  densenet_inference_3d_dict.py  integrate_to_spleen_program.ipynb  multi_gpu_test.ipynb  nifti_read_example.ipynb  transform_speed.ipynb  transforms_demo_2d.ipynb  unet_inference_3d.py  unet_inference_3d_array.py  unet_inference_3d_dict.py  unet_segmentation_3d.ipynb  unet_segmentation_3d.py  unet_segmentation_3d_array.py  unet_segmentation_3d_dict.py
examples/classification_3d/: densenet_evaluation_array.py  densenet_evaluation_dict.py  densenet_training_array.py  densenet_training_dict.py
examples/classification_3d_ignite/: densenet_evaluation_array.py  densenet_evaluation_dict.py  densenet_training_array.py  densenet_training_dict.py
examples/distributed_training/: brats_training_ddp.py  unet_evaluation_ddp.py  unet_evaluation_horovod.py  unet_evaluation_workflows.py  unet_training_ddp.py  unet_training_horovod.py  unet_training_smartcache.py  unet_training_workflows.py
examples/integrate_to_spleen_program/: datalist.py  train.ipynb  train.py
examples/notebooks/: 3D_image_transforms.ipynb  3d_image_transforms.ipynb  IO_factory_test.ipynb  automatic_mixed_precision.ipynb  brats_segmentation_3d.ipynb  cache_dataset_speed.ipynb  integrate_3rd_party_transforms.ipynb  integrate_3rd_transforms.ipynb  io_factory_test.ipynb  mednist_GAN_tutorial.ipynb  mednist_GAN_workflow.ipynb  mednist_tutorial.ipynb  models_ensemble.ipynb  multi_gpu_test.ipynb  nifti_read_example.ipynb  persistent_dataset_speed.ipynb  post_transforms.ipynb  public_datasets.ipynb  spleen_segmentation_3d.ipynb  spleen_segmentation_3d_lightning.ipynb  transform_speed.ipynb  transforms_demo_2d.ipynb  unet_segmentation_3d_catalyst.ipynb  unet_segmentation_3d_ignite.ipynb
examples/segmentation_2d/: unet_evaluation_array.py  unet_evaluation_dict.py  unet_training_array.py  unet_training_dict.py
examples/segmentation_3d/: unet_evaluation_array.py  unet_evaluation_dict.py  unet_training_array.py  unet_training_dict.py
examples/segmentation_3d_ignite/: unet_evaluation_array.py  unet_evaluation_dict.py  unet_training_array.py  unet_training_dict.py
examples/substra/: .gitignore  README.md
examples/synthesis/: adversarial_trainer.py  gan_evaluation.py  gan_training.py  (+4 more)
merged.zarr/: .zarray
monai/: README.md  __init__.py  __init__.py.bak  _version.py  torch.patch
monai_env/: pyvenv.cfg
research/: README.md
test.zarr/: 0.0.0.0
tests/: RUA.py  __init__.py  clang_format_utils.py  croppers.py  hvd_evenly_divisible_all_gather.py  integration_determinism.py  integration_sliding_window.py  integration_unet2d.py  lazy_transforms_utils.py  min_tests.py  ngc_bundle_download.py  ngc_mmar_loading.py  nonconfig_workflow.py  padders.py  rb_test_transforms.py  run_crops.py  run_end_to_end.py  runner.py  tempscript.py  test_CABlock.py  test_acn_block.py  test_activations.py  test_activationsd.py  test_adaptors.py  test_add_activations.py  test_add_activationsd.py  test_add_channeld.py  test_add_coordinate_channels.py  test_add_coordinate_channelsd.py  test_add_extreme_points_channel.py  test_add_extreme_points_channeld.py  test_adjust_contrast.py  test_adjust_contrastd.py  test_adn.py  test_adversarial_loss.py  test_affine.py  test_affine_grid.py  test_affine_transform.py  test_affined.py  test_ahnet.py  (+1033 more)
wandb/: settings
work_dir/: cache.yaml  input.yaml
(+1823 files in other folders)
