[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch>=1.8",
  "ninja",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    # exclude a few common directories in the root of the project
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
  )/
  # also separately exclude a file named versioneer.py
  | monai/_version.py
)
'''

[tool.pycln]
all = true
exclude = "monai/bundle/__main__.py"
